# goji_tweet

./: README.md  pyproject.toml
data/: goji.txt
goji_tweet/src/: change_by_homonym.py  change_by_one_hiragana.py  config.py  create_goji_tweet.py
src/: change_by_homonym.py  change_by_one_hiragana.py  config.py  create_goji_tweet.py
