[tool.poetry]
name = "goji_tweet"
version = "0.1.0"
description = ""
authors = ["Syuko4omi <riorioblackcat@yahoo.co.jp>"]

[tool.poetry.dependencies]
python = "^3.9.13"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.4.1"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
