[tool.poetry]
name = "goji_tweet"
version = "0.1.0"
description = ""
authors = ["Syuko4omi <riorioblackcat@yahoo.co.jp>"]

[tool.poetry.dependencies]
python = "^3.9.13"
Janome = "^0.5.0"
jaconv = "^0.3.4"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
